--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </section>
     </main>
     <footer>
-        <p> Desenvolvido por Ana Ketlin na turma do 3D</p>
+        <p> Desenvolvido por Gabriel Caus na turma do 3D</p>
     </footer>
-    <script type="module" src=""></script>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
 </html>
