--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <a href="#">Wilson Joffre</a>
         </nav>
     </header>
-    <main class="graficos__section">
-        <section id="graficos__container" class="graficos__container">
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
               <!--Criar os gráficos aqui-->
         </section>
     </main>
     <footer>
-        <p> Desenvolvido por Gabriel Caus na turma do 3D</p>
+        <p> Desenvolvido por Gabriel Caus turma do 3D</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
