--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer>
-        <p> Desenvolvido por Gabriel Caus turma do 3D</p>
+        <p> Desenvolvido por Gabriel Caus na turma do 3D</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
